Prevent against text overflow outside chat message list.

--- a/web/css/cantiga.css
+++ b/web/css/cantiga.css
@@ -563,3 +563,7 @@ div.progress-box div.progress-box-link {
 .small-box p:after {
   content: "\00a0";
 }
+.direct-chat-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
